lib/src/generated_bindings.dart


  void wrenSetSlotString(
    ffi.Pointer<WrenVM> vm,
    int slot,
    ffi.Pointer<ffi.Char> text,
  ) {
    return _wrenSetSlotString(
      vm,
      slot,
      text,
    );
  }

  late final _wrenSetSlotStringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<WrenVM>, ffi.Int,
              ffi.Pointer<ffi.Char>)>>('wrenSetSlotString');
  late final _wrenSetSlotString = _wrenSetSlotStringPtr.asFunction<
      void Function(ffi.Pointer<WrenVM>, int, ffi.Pointer<ffi.Char>)>();

  void wrenSetSlotHandle(
    ffi.Pointer<WrenVM> vm,
    int slot,
    ffi.Pointer<WrenHandle> handle,
  ) {
    return _wrenSetSlotHandle(
      vm,
      slot,
      handle,
    );
  }

  late final _wrenSetSlotHandlePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<WrenVM>, ffi.Int,
              ffi.Pointer<WrenHandle>)>>('wrenSetSlotHandle');
  late final _wrenSetSlotHandle = _wrenSetSlotHandlePtr.asFunction<
      void Function(ffi.Pointer<WrenVM>, int, ffi.Pointer<WrenHandle>)>();

  int wrenGetListCount(
    ffi.Pointer<WrenVM> vm,
    int slot,
  ) {
    return _wrenGetListCount(
      vm,
      slot,
    );
  }

  late final _wrenGetListCountPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<WrenVM>, ffi.Int)>>(
      'wrenGetListCount');
  late final _wrenGetListCount =
      _wrenGetListCountPtr.asFunction<int Function(ffi.Pointer<WrenVM>, int)>();

  void wrenGetListElement(
    ffi.Pointer<WrenVM> vm,
    int listSlot,
    int index,
    int elementSlot,
  ) {
    return _wrenGetListElement(
      vm,
      listSlot,
      index,
      elementSlot,
    );
  }

  late final _wrenGetListElementPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<WrenVM>, ffi.Int, ffi.Int,
              ffi.Int)>>('wrenGetListElement');
  late final _wrenGetListElement = _wrenGetListElementPtr
      .asFunction<void Function(ffi.Pointer<WrenVM>, int, int, int)>();

  void wrenSetListElement(
    ffi.Pointer<WrenVM> vm,
    int listSlot,
    int index,
    int elementSlot,
  ) {
    return _wrenSetListElement(
      vm,
      listSlot,
      index,
      elementSlot,
    );
  }

  late final _wrenSetListElementPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<WrenVM>, ffi.Int, ffi.Int,
              ffi.Int)>>('wrenSetListElement');
  late final _wrenSetListElement = _wrenSetListElementPtr
      .asFunction<void Function(ffi.Pointer<WrenVM>, int, int, int)>();

  void wrenInsertInList(
    ffi.Pointer<WrenVM> vm,
    int listSlot,
    int index,
    int elementSlot,
  ) {
    return _wrenInsertInList(
      vm,
      listSlot,
      index,
      elementSlot,
    );
  }

  late final _wrenInsertInListPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<WrenVM>, ffi.Int, ffi.Int,
              ffi.Int)>>('wrenInsertInList');
  late final _wrenInsertInList = _wrenInsertInListPtr
      .asFunction<void Function(ffi.Pointer<WrenVM>, int, int, int)>();

  int wrenGetMapCount(
    ffi.Pointer<WrenVM> vm,
    int slot,
  ) {
    return _wrenGetMapCount(
      vm,
      slot,
    );
  }

  late final _wrenGetMapCountPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<WrenVM>, ffi.Int)>>(
      'wrenGetMapCount');
  late final _wrenGetMapCount =
      _wrenGetMapCountPtr.asFunction<int Function(ffi.Pointer<WrenVM>, int)>();

  bool wrenGetMapContainsKey(
    ffi.Pointer<WrenVM> vm,
    int mapSlot,
    int keySlot,
  ) {
    return _wrenGetMapContainsKey(
      vm,
      mapSlot,
      keySlot,
    );
  }

  late final _wrenGetMapContainsKeyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              ffi.Pointer<WrenVM>, ffi.Int, ffi.Int)>>('wrenGetMapContainsKey');
  late final _wrenGetMapContainsKey = _wrenGetMapContainsKeyPtr
      .asFunction<bool Function(ffi.Pointer<WrenVM>, int, int)>();

  void wrenGetMapValue(
    ffi.Pointer<WrenVM> vm,
    int mapSlot,
    int keySlot,
    int valueSlot,
  ) {
    return _wrenGetMapValue(
      vm,
      mapSlot,
      keySlot,
      valueSlot,
    );
  }

  late final _wrenGetMapValuePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<WrenVM>, ffi.Int, ffi.Int,
              ffi.Int)>>('wrenGetMapValue');
  late final _wrenGetMapValue = _wrenGetMapValuePtr
      .asFunction<void Function(ffi.Pointer<WrenVM>, int, int, int)>();

  void wrenSetMapValue(
    ffi.Pointer<WrenVM> vm,
    int mapSlot,
    int keySlot,
    int valueSlot,
  ) {
    return _wrenSetMapValue(
      vm,
      mapSlot,
      keySlot,
      valueSlot,
    );
  }

  late final _wrenSetMapValuePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<WrenVM>, ffi.Int, ffi.Int,
              ffi.Int)>>('wrenSetMapValue');
  late final _wrenSetMapValue = _wrenSetMapValuePtr
      .asFunction<void Function(ffi.Pointer<WrenVM>, int, int, int)>();

  void wrenRemoveMapValue(
    ffi.Pointer<WrenVM> vm,
    int mapSlot,
    int keySlot,
    int removedValueSlot,
  ) {
    return _wrenRemoveMapValue(
      vm,
      mapSlot,
      keySlot,
      removedValueSlot,
    );
  }

  late final _wrenRemoveMapValuePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<WrenVM>, ffi.Int, ffi.Int,
              ffi.Int)>>('wrenRemoveMapValue');
  late final _wrenRemoveMapValue = _wrenRemoveMapValuePtr
      .asFunction<void Function(ffi.Pointer<WrenVM>, int, int, int)>();

  void wrenGetVariable(
    ffi.Pointer<WrenVM> vm,
    ffi.Pointer<ffi.Char> module,
    ffi.Pointer<ffi.Char> name,
    int slot,
  ) {
    return _wrenGetVariable(
      vm,
      module,
      name,
      slot,
    );
  }

  late final _wrenGetVariablePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<WrenVM>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Int)>>('wrenGetVariable');
  late final _wrenGetVariable = _wrenGetVariablePtr.asFunction<
      void Function(ffi.Pointer<WrenVM>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, int)>();

  bool wrenHasVariable(
    ffi.Pointer<WrenVM> vm,
    ffi.Pointer<ffi.Char> module,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _wrenHasVariable(
      vm,
      module,
      name,
    );
  }

  late final _wrenHasVariablePtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<WrenVM>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('wrenHasVariable');
  late final _wrenHasVariable = _wrenHasVariablePtr.asFunction<
      bool Function(
          ffi.Pointer<WrenVM>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  bool wrenHasModule(
    ffi.Pointer<WrenVM> vm,
    ffi.Pointer<ffi.Char> module,
  ) {
    return _wrenHasModule(
      vm,
      module,
    );
  }

  late final _wrenHasModulePtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              ffi.Pointer<WrenVM>, ffi.Pointer<ffi.Char>)>>('wrenHasModule');
  late final _wrenHasModule = _wrenHasModulePtr
      .asFunction<bool Function(ffi.Pointer<WrenVM>, ffi.Pointer<ffi.Char>)>();

  void wrenAbortFiber(
    ffi.Pointer<WrenVM> vm,
    int slot,
  ) {
    return _wrenAbortFiber(
      vm,
      slot,
    );
  }

  late final _wrenAbortFiberPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<WrenVM>, ffi.Int)>>(
      'wrenAbortFiber');
  late final _wrenAbortFiber =
      _wrenAbortFiberPtr.asFunction<void Function(ffi.Pointer<WrenVM>, int)>();

  ffi.Pointer<ffi.Void> wrenGetUserData(
    ffi.Pointer<WrenVM> vm,
  ) {
    return _wrenGetUserData(
      vm,
    );
  }

  late final _wrenGetUserDataPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<WrenVM>)>>(
      'wrenGetUserData');
  late final _wrenGetUserData = _wrenGetUserDataPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<WrenVM>)>();

  void wrenSetUserData(
    ffi.Pointer<WrenVM> vm,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _wrenSetUserData(
      vm,
      userData,
    );
  }

  late final _wrenSetUserDataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<WrenVM>, ffi.Pointer<ffi.Void>)>>('wrenSetUserData');
  late final _wrenSetUserData = _wrenSetUserDataPtr
      .asFunction<void Function(ffi.Pointer<WrenVM>, ffi.Pointer<ffi.Void>)>();
}

final class WrenVM extends ffi.Opaque {}

final class WrenHandle extends ffi.Opaque {}

final class WrenLoadModuleResult extends ffi.Struct {
  external ffi.Pointer<ffi.Char> source;

  external WrenLoadModuleCompleteFn onComplete;

  external ffi.Pointer<ffi.Void> userData;
}

typedef WrenLoadModuleCompleteFn = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Void Function(ffi.Pointer<WrenVM> vm, ffi.Pointer<ffi.Char> name,
            WrenLoadModuleResult result)>>;

abstract class WrenErrorType {
  static const int WREN_ERROR_COMPILE = 0;
  static const int WREN_ERROR_RUNTIME = 1;
  static const int WREN_ERROR_STACK_TRACE = 2;
}

final class WrenForeignClassMethods extends ffi.Struct {
  external WrenForeignMethodFn allocate;

  external WrenFinalizerFn finalize;
}

typedef WrenForeignMethodFn = ffi
    .Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<WrenVM> vm)>>;
typedef WrenFinalizerFn = ffi
    .Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void> data)>>;

final class WrenConfiguration extends ffi.Struct {
  external WrenReallocateFn reallocateFn;

  external WrenResolveModuleFn resolveModuleFn;

  external WrenLoadModuleFn loadModuleFn;

  external WrenBindForeignMethodFn bindForeignMethodFn;

  external WrenBindForeignClassFn bindForeignClassFn;

  external WrenWriteFn writeFn;

  external WrenErrorFn errorFn;

  @ffi.Size()
  external int initialHeapSize;

  @ffi.Size()
  external int minHeapSize;

  @ffi.Int()
  external int heapGrowthPercent;

  external ffi.Pointer<ffi.Void> userData;
}

typedef WrenReallocateFn = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void> memory,
            ffi.Size newSize, ffi.Pointer<ffi.Void> userData)>>;
typedef WrenResolveModuleFn = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<WrenVM> vm,
            ffi.Pointer<ffi.Char> importer, ffi.Pointer<ffi.Char> name)>>;
typedef WrenLoadModuleFn = ffi.Pointer<
    ffi.NativeFunction<
        WrenLoadModuleResult Function(
            ffi.Pointer<WrenVM> vm, ffi.Pointer<ffi.Char> name)>>;
typedef WrenBindForeignMethodFn = ffi.Pointer<
    ffi.NativeFunction<
        WrenForeignMethodFn Function(
            ffi.Pointer<WrenVM> vm,
            ffi.Pointer<ffi.Char> module,
            ffi.Pointer<ffi.Char> className,
            ffi.Bool isStatic,
            ffi.Pointer<ffi.Char> signature)>>;
typedef WrenBindForeignClassFn = ffi.Pointer<
    ffi.NativeFunction<
        WrenForeignClassMethods Function(ffi.Pointer<WrenVM> vm,
            ffi.Pointer<ffi.Char> module, ffi.Pointer<ffi.Char> className)>>;
typedef WrenWriteFn = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Void Function(ffi.Pointer<WrenVM> vm, ffi.Pointer<ffi.Char> text)>>;
typedef WrenErrorFn = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Void Function(
            ffi.Pointer<WrenVM> vm,
            ffi.Int32 type,
            ffi.Pointer<ffi.Char> module,
            ffi.Int line,
            ffi.Pointer<ffi.Char> message)>>;

abstract class WrenInterpretResult {
  static const int WREN_RESULT_SUCCESS = 0;
  static const int WREN_RESULT_COMPILE_ERROR = 1;
  static const int WREN_RESULT_RUNTIME_ERROR = 2;
}
